* fix: Customer reported runtime errors (Thanks Mark R.)