@@ -1,1 +1,3 @@
 * fix: Customer reported runtime errors (Thanks Mark R.)
+* enhancement: Disable the plugin if ACF not installed or WPSiteSync version too old.
+* fix: References to class constants (Thanks James K.)
